# sbom_security_toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATA-SAFETY.md  DEPLOYMENT-SUMMARY.txt  FILE-MANIFEST.sha256  GITHUB-RELEASE.md  LICENSE  MULTI-ECOSYSTEM-FUZZING.md  Makefile  QUICK_START.md  README.md  RECONCILIATION-MANIFEST.json  RELEASE-MANIFEST.json  RELEASE-NOTES.md  ROADMAP.md  SBOM-FORMAT-SUPPORT.md  SECURITY.md  UPGRADE.md  VALIDATION.md  extract-components.py  install.sh  orchestrate.sh  owners-test.yml  pyproject.toml  requirements-ai-aws.txt  requirements-dev.txt  requirements.txt  run_fuzz_smoke.py  run_workbench_fuzz_smoke.py  setup.py  setup.sh  test-multi-ecosystem.sh
.fuzz/: build.sh  project.yaml
.github/: pull_request_template.md
ai_fuzz/: README.md  __init__.py
aws/: bootstrap.sh  iam-bedrock-policy.json
ci/: github-actions-fuzz-nightly.yml  github-actions-fuzz-scheduled.yml  github-actions-release-assurance.yml  github-actions-release-evidence.yml  gitlab-release-assurance.yml
configs/: connectors.example.yml
docker/: Dockerfile  docker-compose.cloud.yml  docker-compose.dtrack.yml  docker-compose.guac.yml
docs/: ACTIONABLE-WORKFLOWS.md  ARCHITECTURE.md  CONNECTORS.md  DEMO.md  GUIDED-EXPERIENCE.md  IMPLEMENTATION-ROADMAP-2.9.md  INSTALL.md  RELEASE-ASSURANCE.md
fuzzing/: ARCHITECTURE.md  README-ENGINES.md  detect-ecosystems.py  local-model-seed-suggest.sh  run-all.sh  status_report.py
governance/: context.yml  exceptions.yml
policies/: basic.yml  default-release-policy.yml  generated-test.yml  high-assurance.yml  production-release-assurance.yml  production-release-policy.yml  supplier-intake-policy.yml
sbom_security_toolkit-2.10.0-connector-platform/: Makefile  requirements-dev.txt
sbom_security_toolkit-2.9.0/: ADD-SPDX-SUPPORT.md  CODEOWNERS  MULTI-ECOSYSTEM-FUZZING.md  QUICK_START.md  RELEASE-NOTES.md
sbomops/: __init__.py  ai_report_writer.py  analyze_project.py  assurance.py  cli.py  cloud.py  common.py  confidence.py  connectors.py  demo_runtime.py  dependency_health.py  diff.py  edr.py  evidence_bundle.py  explain.py  findings.py  guac_export.py  integrations.py  inventory.py  minimum_elements.py  normalize.py  org_model.py  ui.py  (+17 more)
(+581 files in other folders)
