[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbom-security-toolkit"
version = "2.14.2"
description = "Local-first SBOM security operations, fuzzing, intake, evidence, and workbench toolkit."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "FSL-1.1-ALv2" }
authors = [{ name = "SBOM Security Toolkit Contributors" }]
keywords = ["sbom", "cyclonedx", "spdx", "supply-chain", "fuzzing", "vex", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "coverage>=7.5.0",
  "pytest>=8.0.0",
]

[project.scripts]
sst = "sbomops.cli:main"

[tool.setuptools]
packages = ["sbomops", "sbomops.workbench", "ai_fuzz", "ai_fuzz.tools", "ai_fuzz.config"]
include-package-data = true

[tool.setuptools.package-data]
ai_fuzz = ["config/*.yml", "prompts/*.md"]
